--- a/article1.tex
+++ b/article1.tex
@@ -1,8 +1,12 @@
 \documentclass{article}
 \usepackage[cp1251]{inputenc}
 \usepackage[T2A]{fontenc}
-
+\author{Анастасия}
+\date{today}
+\title{Просто статья}
 \begin{document}
+\maketitle
+
 Минимальный докумет \LaTeX.
 
 \end{document}
